[package]
name = "hoyo-checkin-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0", features = ["json", "rustls-tls", "hickory-dns", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
panic = "abort"